<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_fragment_background"
    tools:context=".fragments.login.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:letterSpacing="0.2"
                android:text="@string/LoginTitle"
                android:textColor="#041778"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="30dp"
                android:padding="5dp"
                android:text="UserName"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/LoginUserName_id"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/rounded_edittext"
                android:paddingLeft="10dp"
                tools:text="sssss" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="Password"
                    android:textSize="15sp" />

                <EditText

                    android:id="@+id/LoginPassword_id"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/rounded_edittext"
                    android:paddingLeft="10dp"
                    tools:text="sssss" />

                <ImageView
                    android:id="@+id/pssw_img_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="62dp"
                    android:layout_marginRight="50dp"
                    android:src="@drawable/ic_lock" />

            </FrameLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/rounded_edittext"
                android:backgroundTint="#112EC6"
                android:text="@string/LoginButton"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/newUser_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/NewUserText"
                android:textColor="#621CC6"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>


    </ScrollView>
</FrameLayout>